# WMH-Segmentation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
config/model/lgb/: lgb_example.yml  summary.yml
data/neuromorphometric/: neurom_labels.xlsx
data/quality_check/: qc_diffusion.csv  qc_flair.csv  qc_mpm.csv
deployment/: Dockerfile  README.md  app.def  docker-compose.yml  requirements.txt
deployment/data/neuromorphometric/: lobe_regions.csv  neurom_labels.xlsx  subcortical_labels.csv
deployment/data/sample_data/: sample_data.csv
deployment/src/: __init__.py  constants.py  data_class.py  data_loader.py  feature_extractors.py  model.py  post_processing.py  predict.py  utils.py
src/: README.md
src/analysis/: __init__.py  metrics.py
src/analysis/model_comparisons/: __init__.py  model_assessment.py  (+1 more)
src/data_func/: __init__.py  data_class.py  data_load.py  dataset_creation.py  feature_extractors.py  h5_helpers.py  post_processing.py  utils.py
src/misc/: __init__.py  constants.py  utils.py
src/mlflow_func/: __init__.py  mlflow_logger.py
src/models/: __init__.py  base_model.py  base_model_classical.py  lgboost.py  model_loaders.py  model_utils.py  random_forest.py
src/notebooks/: data_analysis.ipynb  results.ipynb
src/scripts/: __init__.py  coregister_labels.py  run.py  run_shap.py  run_summary.py  run_uq.py  save_h5.py  script.py
src/viz/: __init__.py  data_viz.py  feature_plots.py  models_comparison.py  pr_roc.py  rc_viz.py  seg_grading.py  shap_viz.py  stats.py  viewer.py  viz_utils.py
(+17 files in other folders)
